--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,5 @@
   command = "npm run build"
   publish = "dist/public"
 
-[[redirects]]
-  from = "/api/*"
-  to = "https://d3-alpha-sow-forge.replit.app/:splat"
-  status = 200
-  force = true
+[functions]
+  directory = "netlify/functions"
